--- a/docs/style.css
+++ b/docs/style.css
@@ -203,9 +203,9 @@ a:hover {
 }
 
 .header-logo {
-    max-width: 200px;
+    max-width: 33%;
     height: auto;
-    margin-bottom: 15px;
+    margin-bottom: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
